fix gap

--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -3,7 +3,7 @@
 .experience-card {
     display: flex;
     margin: 5rem 0;
-    gap: 20rem;
+    gap: 12rem;
 }
 
 .experience-info {
